Bugfix - removed y-axis scrollbar

--- a/cot-report-frontend/frontend/src/app/cot-report/cot-report.component.scss
+++ b/cot-report-frontend/frontend/src/app/cot-report/cot-report.component.scss
@@ -6,6 +6,11 @@
 .table {
     width: 100%;
 }
+
+.row {
+    width: 99%;
+}
+
 th, td { text-align: center; }
 
 .my-logo {
